--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                     	</div>
                         <div class="block">
                             <p>
-                            В рамках школы внимательный слушатель узнает
+                            В рамках школы внимательный слушатель узнает:
 
                             <ol>
                                 <li>Зачем нужны байесовские методы. Почему вокруг нас практически нет случайностей?</li>
@@ -240,7 +240,7 @@
                         </div>
                         <div class="info">
                             Дмитрий Кропотов<br/>
-                            научный секретарь кафедры ММП ВМК МГУ
+                            научный секретарь кафедры<br/> ММП ВМК МГУ
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-3">
@@ -258,7 +258,7 @@
                         </div>
                         <div class="info">
                             Евгений Бурнаев<br/>
-                            Профессор Сколтеха; доцент ФКН ВШЭ
+                            Профессор Сколтеха;<br/> доцент ФКН ВШЭ
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-3">
@@ -333,11 +333,11 @@
                         <ul>
                             <li>
                                 <strong>Какова стоимость участия?</strong>
-                                <p>Стоимость участия составит 1000 рублей для студентов и аспирантов ВУЗов, 10 000 рублей для представителей образовательных и научных организаций, и 30 000 рублей для остальных участников.</p>
+                                <p>Стоимость участия составит 1000 рублей для студентов и аспирантов ВУЗов, 10 000 рублей для представителей образовательных и научных организаций и 30 000 рублей для остальных участников.</p>
                             </li>
                             <li>
                                 <strong>Просто заплатил деньги и все?</strong>
-                                <p>Нет, не просто. Сначала мы попросим всех пройти отбор и деньги будем брать только с самых стойких, которые его выдержат и будут отобраны для участия в школе. Отбор нужен потому что, во-первых, число мест физически ограниченно; во-вторых, чтобы гарантировать, что все слушатели обладают достаточным багажом знаний и умений, чтобы усвоить материал школы.</p>
+                                <p>Нет, не просто. Сначала мы попросим всех пройти отбор и деньги будем брать только с самых стойких, которые его выдержат и будут отобраны для участия в школе. Отбор нужен потому, что, во-первых, число мест физически ограниченно; во-вторых, чтобы гарантировать, что все слушатели обладают достаточным багажом знаний и умений, чтобы усвоить материал школы.</p>
                             </li>
                             <li>
                                 <strong>Каковы критерии отбора?</strong>
@@ -368,7 +368,7 @@
                                 имеет хотя бы самое общее представление о нейронных сетях. Такая планка позволит нам
                                 быстро перейти к изложению сложных технических вещей, будучи уверенными, что все
                                 присутствующие нас понимают. В Москве проводится масса мероприятий по машинному
-                                обучению, где порог вхождения минимален, а интернете можно найти много ресурсов,
+                                обучению, где порог вхождения минимален, а в интернете можно найти много ресурсов,
                                 которые позволят вам лучше разобраться в базовых технологиях машинного обучения.</p>
                             </li>
                             <li>
