--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
         <!-- Fonts -->
         <!-- Lato -->
         <link href='http://fonts.googleapis.com/css?family=Lato:400,300,700' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
 
         <!-- CSS -->
 
@@ -211,10 +210,11 @@
         ==================== -->
         <section id="speakers" class="section">
             <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
                 <div class="sub-heading">
                     <h2>Лекторы</h2>
                 </div>
-                <div class="row">
                     <div class="block expandable" style="height: 100px">
                         <div>
                     <p>Лекторами и тьюторами будут сотрудники <a href="http://bayesgroup.ru">группы Байесовских методов</a>, базирующейся, в основном, на факультете компьютерных наук НИУ ВШЭ, а также наши друзья из научных групп Сколтеха и ВМК МГУ.
@@ -318,6 +318,7 @@
                     </div>
                 </div>
             </div>
+            </div>
         </section><!-- #speakers close -->
 
         <!-- 
@@ -329,7 +330,7 @@
                     <h2>FAQ</h2>
                 </div>
                 <div class="row">
-                    <div class="col-md-6 col-sm-12 wow fadeInLeft">
+                    <div class="col-md-6 col-sm-12">
                         <ul>
                             <li>
                                 <strong>Какова стоимость участия?</strong>
@@ -360,7 +361,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="col-md-6 col-sm-12 wow fadeInLeft" data-wow-delay="0.3s">
+                    <div class="col-md-6 col-sm-12">
                         <ul>
                             <li>
                                 <strong>Я мало что знаю о том, что такое машинное обучение, но хочу узнать больше. Мне стоит участвовать в школе?</strong>
@@ -401,7 +402,7 @@
         <section id="subscribe" class="section">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-12 wow text-center">
+                    <div class="col-md-12 text-center">
                         <div class="block">
                             <h2>Регистрация</h2>
                             <p>Мы пока не принимаем заявок на школу, но Вы можете оставить свою <a href="https://goo.gl/forms/q9yfd55yzdvj3pmB2">контактную информацию</a> – это позволит нам оперативно уведомить всех заинтересованных о начале приёма заявок.</p>
@@ -417,10 +418,10 @@
         <section id="organizers" class="section">
             <div class="container">
                 <div class="row">
-                    <div class="heading wow fadeInUp">
+                    <div class="heading">
                         <h2>Организаторы</h2>
                     </div>
-                    <div class="col-sm-6 col-md-6 wow fadeInLeft" data-wow-delay="0.3s">
+                    <div class="col-sm-6 col-md-6">
                         <div class="sponsor">
                             <div class="logo-box">
                                 <a href="https://hse.ru/"><img src="images/hse.png" /></a>
@@ -430,7 +431,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-md-6 wow fadeInLeft" data-wow-delay="0.6s">
+                    <div class="col-sm-6 col-md-6">
                         <div class="sponsor">
                             <div class="logo-box">
                                 <a href="http://bayesgroup.ru/"><img src="images/bayesgroup.png" /></a>
@@ -450,7 +451,7 @@
         <section id="sponsors" class="section">
             <div class="container">
                 <div class="row">
-                    <div class="heading wow fadeInUp">
+                    <div class="heading">
                         <h2>Спонсоры</h2>
                         <p>Мы всячески приветствуем помощь от любых организаций. Средства пойдут на (1)
                         нормальное питание на кофе-брейках для участников взамен ссохшихся бутербродов; (2)
@@ -531,7 +532,7 @@
         <section id="contacts" class="section">
             <div class="container">
                 <div class="row">
-                    <div class="heading wow fadeInUp">
+                    <div class="heading">
                         <h2>Контакты</h2>
                         <p>Если у Вас есть какие-либо вопросы по школе, пишите на <a href="mailti:info@deepbayes.ru">info@deepbayes.ru</a>, <br/>а если Вы хотите выступить спонсором школы, пишите на <a href="mailto:vetrovd@yandex.ru">vetrovd@yandex.ru</a>.</p>
                     </div>
@@ -555,13 +556,53 @@
         <!-- Js -->
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
         <script src="js/vendor/jquery-1.10.2.min.js"></script>
-        <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
+        <!-- script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script -->
         <script src="js/bootstrap.min.js"></script>
         <script src="js/jquery.nav.js"></script>
         <script src="js/jquery.sticky.js"></script>
         <script src="js/plugins.js"></script>
         <script src="js/wow.min.js"></script>
         <script src="js/main.js"></script>
-        
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-87288650-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+<!-- Yandex.Metrika counter -->
+<script type="text/javascript">
+    (function (d, w, c) {
+        (w[c] = w[c] || []).push(function() {
+            try {
+                w.yaCounter40840914 = new Ya.Metrika({
+                    id:40840914,
+                    clickmap:true,
+                    trackLinks:true,
+                    accurateTrackBounce:true,
+                    webvisor:true
+                });
+            } catch(e) { }
+        });
+
+        var n = d.getElementsByTagName("script")[0],
+            s = d.createElement("script"),
+            f = function () { n.parentNode.insertBefore(s, n); };
+        s.type = "text/javascript";
+        s.async = true;
+        s.src = "https://mc.yandex.ru/metrika/watch.js";
+
+        if (w.opera == "[object Opera]") {
+            d.addEventListener("DOMContentLoaded", f, false);
+        } else { f(); }
+    })(document, window, "yandex_metrika_callbacks");
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/40840914" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
+
     </body>
 </html>
