--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 	                <div class="col-md-8">
 	                    <div class="block">
 	                        <h1 class="wow fadeInDown">Школа по Байесовским методам в глубинном обучении</h1>
-	                        <p class="wow fadeInDown" data-wow-delay="0.3s">Летняя школа по современным методам глубокого обучения, байесовскому подходу и обучению с подкреплением</p>
+	                        <p class="wow fadeInDown" data-wow-delay="0.3s">Летняя школа по современным методам глубинного обучения, байесовскому подходу и обучению с подкреплением</p>
 	                        <p class="wow fadeInDown" data-wow-delay="0.3s">26-31 августа 2017, Москва</p>
 	                        <div class="wow fadeInDown" data-wow-delay="0.3s">
 	                        	<a class="btn btn-default btn-home" href="#about" role="button">Подробнее</a>
