--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 	                <div class="col-md-8">
 	                    <div class="block">
 	                        <h1 class="wow fadeInDown">Школа по Байесовским методам в глубинном обучении</h1>
-	                        <p class="wow fadeInDown" data-wow-delay="0.3s">Летняя школа по современным методам глубинного обучения, байесовскому подходу и обучению с подкреплением</p>
+                            <p class="wow fadeInDown" data-wow-delay="0.3s">Летняя школа по современным методам глубинного обучения и байесовскому подходу</p>
 	                        <p class="wow fadeInDown" data-wow-delay="0.3s">26-31 августа 2017, Москва</p>
 	                        <div class="wow fadeInDown" data-wow-delay="0.3s">
 	                        	<a class="btn btn-default btn-home" href="#about" role="button">Подробнее</a>
@@ -240,7 +240,7 @@
                         </div>
                         <div class="info">
                             Дмитрий Кропотов<br/>
-                            научный секретарь кафедры<br/> ММП ВМК МГУ
+                            ученый секретарь кафедры<br/> ММП ВМК МГУ
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-3">
@@ -460,7 +460,7 @@
                         одна» ручка, флешка и блокнот); а если первые три активности не скушают весь бюджет,
                         то еще и (4) устроим веселый банкет для всех, на котором участники смогут пообщаться с
                         лекторами и тьюторами :-)</p>
-                        <p>По вопросам поддержки школы пишите на <a href="mailto:vetrovd@yandex.ru">vetrovd@yandex.ru</a>.</p>
+                        <p>По вопросам поддержки школы пишите на <a href="mailto:info@deepbayes.ru">info@deepbayes.ru</a>.</p>
                     </div>
                     <div class="col-sm-6 col-md-4">
                         <div class="sponsor">
@@ -534,7 +534,7 @@
                 <div class="row">
                     <div class="heading">
                         <h2>Контакты</h2>
-                        <p>Если у Вас есть какие-либо вопросы по школе, пишите на <a href="mailti:info@deepbayes.ru">info@deepbayes.ru</a>, <br/>а если Вы хотите выступить спонсором школы, пишите на <a href="mailto:vetrovd@yandex.ru">vetrovd@yandex.ru</a>.</p>
+                        <p>Если у Вас есть какие-либо вопросы по школе, или Вы хотите выступить спонсором школы, пишите на <a href="mailto:info@deepbayes.ru">info@deepbayes.ru</a>.</p>
                     </div>
                 </div>
             </div><!-- .container close -->
