--- a/index.html
+++ b/index.html
@@ -102,22 +102,7 @@
                     	</div>
                         <div class="block">
                             <p>
-                            В современном глубинном обучении наблюдается тренд на сращивание нейросетевых и
-                            байесовских моделей.
-                            Однако байесовский подход к машинному обучению требует определенного
-                            владения математическим аппаратом и рядом специальных техник, обычно остающихся за
-                            кадром стандартных курсов по машинному обучению.
-                            </p><p>
-                            Целью летней школы является ликвидация барьера, препятствующего чтению многих
-                            последних статей и пониманию принципов работы современных нейросетевых моделей.
-                            Для этого в рамках школы предполагается цикл взаимосвязанных лекций, которые позволят сформировать
-                            целостную картину, объединяющую байесовские и нейросетевые модели в единый
-                            формализм. Дополнительно в программу предполагается включить лекции по
-                            современным методам стохастической оптимизации, основным библиотекам алгоритмов
-                            глубинного обучения. Также будет рассмотрен ряд, на первый взгляд не связанных друг с
-                            другом прикладных задач, и будет показано, что в их решении используются одни и те же
-                            вероятностные нейросетевые методы. Лекционный материал будет сопровождаться
-                            практиками.
+                            На летней школе мы объясним, как байесовские методы и глубинное обучение объединяются в единый формализм. Понимание этого нужно для чтения новых статей по глубинному обучению, в которых часто предполагается знание байесовских методов. Мы рассмотрим ряд на первый взгляд не связанных прикладных задач, которые решаются одними и теми же байесовскими глубинными моделями. Будет показано, как обучение с подкреплением связано с байесовскими методами. Также мы расскажем про современные методы стохастической оптимизации и основные библиотеки глубинного обучения. Лекции будут сопровождаться практическими занятиями.
                             </p>
                         </div>
                     	<div class="sub-heading">
