--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     	</div>
                         <div class="block">
                             <p>
-                            На летней школе мы объясним, как байесовские методы и глубинное обучение объединяются в единый формализм. Понимание этого нужно для чтения новых статей по глубинному обучению, в которых часто предполагается знание байесовских методов. Мы рассмотрим ряд на первый взгляд не связанных прикладных задач, которые решаются одними и теми же байесовскими глубинными моделями. Будет показано, как обучение с подкреплением связано с байесовскими методами. Также мы расскажем про современные методы стохастической оптимизации и основные библиотеки глубинного обучения. Лекции будут сопровождаться практическими занятиями.
+                            На летней школе мы объясним, как байесовские методы и глубинное обучение объединяются в единый формализм. Понимание этого нужно для чтения новых статей по глубинному обучению, в которых часто предполагается знание байесовских методов. Мы рассмотрим ряд на первый взгляд не связанных прикладных задач, которые тем не менее решаются одними и теми же байесовскими глубинными моделями. Будет показано, как обучение с подкреплением связано с байесовскими методами. Также мы расскажем про современные методы стохастической оптимизации и основные библиотеки глубинного обучения. Лекции будут сопровождаться практическими занятиями.
                             </p>
                         </div>
                     	<div class="sub-heading">
