--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
                                 <a href="http://bayesgroup.ru/"><img src="images/bayesgroup.png" /></a>
                             </div>
                             <div class="caption">
-                                <p>Исследовательская группа Байесовских методов</p>
+                                <p>Исследовательская группа байесовских методов</p>
                             </div>
                         </div>
                     </div>
