Replaced svg with png for JB

--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
                     <div class="col-sm-6 col-md-4">
                         <div class="sponsor">
                             <div class="logo-box">
-                                <a href="https://jetbrains.com/"><img src="images/jetbrains.svg" title="JetBrains" /></a>
+                                <a href="https://jetbrains.com/"><img src="images/jetbrains.png" title="JetBrains" /></a>
                             </div>
                             <div class="caption">
                                 <p>Золотой спонсор</p>
