--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>DeepBayes – Летняя школа по современным методам глубинного обучения и байесовскому подходу</title>
-        <meta name="description" content="">
+        <meta name="description" content="Летняя школа по современным методам глубинного обучения и байесовскому подходу">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
