Added an image for FB shares

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>DeepBayes – Летняя школа по современным методам глубинного обучения и байесовскому подходу</title>
-        <meta name="description" content="Летняя школа по современным методам глубинного обучения и байесовскому подходу">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="Летняя школа по современным методам глубинного обучения и байесовскому подходу" />
+        <meta property="og:image" content="images/school-logo.png" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
