Added location to the description

--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>DeepBayes – Летняя школа по современным методам глубинного обучения и байесовскому подходу</title>
-        <meta name="description" content="Летняя школа по современным методам глубинного обучения и байесовскому подходу" />
+        <meta name="description" content="Летняя школа по современным методам глубинного обучения и байесовскому подходу. Москва, 26-31 августа 2017" />
         <meta property="og:image" content="http://deepbayes.ru/images/school-logo.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
         <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32"/>
         <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16"/>
