--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                         <ul>
                             <li>
                                 <strong>Какова стоимость участия?</strong>
-                                <p>Стоимость участия составит 1000 рублей для студентов и аспирантов ВУЗов, 10 000 рублей для представителей образовательных и научных организаций и 30 000 рублей для остальных участников.</p>
+                                <p>Стоимость участия составит 1000 рублей для студентов и аспирантов (на момент весны 2017) ВУЗов, 10 000 рублей для представителей образовательных и научных организаций и 30 000 рублей для остальных участников.</p>
                             </li>
                             <li>
                                 <strong>Просто заплатил деньги и все?</strong>
