--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 	                    <li><a href="#about">О школе</a></li>
 	                    <li><a href="#faq">FAQ</a></li>
 	                    <li><a href="#subscribe">Подписаться</a></li>
+	                    <li><a href="#partners">Партнёры</a></li>
 	                    <li><a href="#contacts">Контакты</a></li>
 	                </ul>
 	            </nav><!-- /.navbar-collapse -->
@@ -406,7 +407,7 @@
                         <h2>Организаторы</h2>
                     </div>
                     <div class="col-sm-6 col-md-6">
-                        <div class="sponsor">
+                        <div class="partner">
                             <div class="logo-box">
                                 <a href="https://hse.ru/"><img src="images/hse.png" /></a>
                             </div>
@@ -416,7 +417,7 @@
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-6">
-                        <div class="sponsor">
+                        <div class="partner">
                             <div class="logo-box">
                                 <a href="http://bayesgroup.ru/"><img src="images/bayesgroup.png" /></a>
                             </div>
@@ -430,13 +431,13 @@
         </section><!-- #organizers close -->
 
         <!-- 
-        Sponsors start
+        partners start
         ==================== -->
-        <section id="sponsors" class="section">
+        <section id="partners" class="section">
             <div class="container">
                 <div class="row">
                     <div class="heading">
-                        <h2>Спонсоры</h2>
+                        <h2>Партнёры</h2>
                         <p>Мы всячески приветствуем помощь от любых организаций. Средства пойдут на (1)
                         нормальное питание на кофе-брейках для участников взамен ссохшихся бутербродов; (2)
                         некоторое количество тревел-грантов для иногородних ребят; (3) памятные сувениры для
@@ -447,68 +448,68 @@
                         <p>По вопросам поддержки школы пишите на <a href="mailto:info@deepbayes.ru">info@deepbayes.ru</a>.</p>
                     </div>
                     <div class="col-sm-6 col-md-4">
-                        <div class="sponsor">
+                        <div class="partner">
                             <div class="logo-box">
                                 <a href="https://sberbank.ru/"><img src="images/sber-logo.png" title="Сбербанк" /></a>
                             </div>
                             <div class="caption">
-                                <p>Платиновый спонсор</p>
+                                <p>Платиновый партнёр</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-4">
-                        <div class="sponsor">
+                        <div class="partner">
                             <div class="logo-box">
                                 <a href="https://yandex.ru/"><img src="images/yandex.png" title="Yandex" /></a>
                             </div>
                             <div class="caption">
-                                <p>Платиновый спонсор</p>
+                                <p>Платиновый партнёр</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-4">
-                        <div class="sponsor">
+                        <div class="partner">
                             <div class="logo-box">
                                 <a href="http://www.kaspersky.ru/"><img src="images/kaspersky.png" title="Лаборатория Касперского" /></a>
                             </div>
                             <div class="caption">
-                                <p>Платиновый спонсор</p>
+                                <p>Платиновый партнёр</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-4">
-                        <div class="sponsor">
+                        <div class="partner">
                             <div class="logo-box">
                                 <a href="https://jetbrains.com/"><img src="images/jetbrains.png" title="JetBrains" /></a>
                             </div>
                             <div class="caption">
-                                <p>Золотой спонсор</p>
+                                <p>Золотой партнёр</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-4">
-                        <div class="sponsor">
+                        <div class="partner">
                             <div class="logo-box">
                                 <a href="http://www.nvidia.com/"><img src="images/nvidia.png" title="Nvidia" /></a>
                             </div>
                             <div class="caption">
-                                <p>Спонсор</p>
+                                <p>Партнёр</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-4">
-                        <div class="sponsor">
+                        <div class="partner">
                             <div class="logo-box">
                                 <a href="http://www.slb.com/"><img src="images/schlumberger.png" title="Schlumberger" /></a>
                             </div>
                             <div class="caption">
-                                <p>Спонсор</p>
+                                <p>Партнёр</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div><!-- .container close -->
-        </section><!-- #sponsor close -->
+        </section><!-- #partner close -->
 
         <!-- 
         Contacts start
@@ -518,7 +519,7 @@
                 <div class="row">
                     <div class="heading">
                         <h2>Контакты</h2>
-                        <p>Если у Вас есть какие-либо вопросы по школе, или Вы хотите выступить спонсором школы, пишите на <a href="mailto:info@deepbayes.ru">info@deepbayes.ru</a>.</p>
+                        <p>Если у Вас есть какие-либо вопросы по школе, или Вы хотите выступить партнёром школы, пишите на <a href="mailto:info@deepbayes.ru">info@deepbayes.ru</a>.</p>
                     </div>
                 </div>
             </div><!-- .container close -->
