Moved organizers into the header

--- a/index.html
+++ b/index.html
@@ -83,8 +83,21 @@
 	                    </div>
 	                </div>
 	                <div class="col-md-4 zoomIn">
-	                    <div class="block">
-	                    </div>
+                        <div class="organizer">
+                            <div class="logo-box">
+                                <a href="https://hse.ru/"><img src="images/hse.png" /></a>
+                            </div>
+                            <!--div class="caption">
+                                <p>Высшая Школа Экономики<!--, Факультет Компьютерных Наук--></p>
+                                </div-->
+                            <hr/>
+                            <div class="logo-box">
+                                <a href="http://bayesgroup.ru/"><img src="images/bayesgroup.png" /></a>
+                            </div>
+                            <div class="caption">
+                                <p>Исследовательская группа байесовских методов</p>
+                            </div>
+                        </div>
 	                </div>
 	            </div><!-- .row close -->
 	        </div><!-- .container close -->
@@ -234,7 +247,8 @@
                         </div>
                         <div class="info">
                             Сергей Бартунов<br/>
-                            Research Scientist, Google DeepMind
+                            Research Scientist, Google DeepMind<br/>
+                            ст. преп. департамента больших данных и информационного поиска ФКН ВШЭ
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-3">
@@ -280,7 +294,7 @@
                         </div>
                         <div class="info">
                             Евгений Соколов<br/>
-                            зам.рук. департамента больших данных и информационного поиска ФКН ВШЭ 
+                            зам. рук. департамента больших данных и информационного поиска ФКН ВШЭ 
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-3">
@@ -396,39 +410,6 @@
                 </div>
             </div>
         </section><!-- #call-to-action close -->
-
-        <!-- 
-        Organizers start
-        ==================== -->
-        <section id="organizers" class="section">
-            <div class="container">
-                <div class="row">
-                    <div class="heading">
-                        <h2>Организаторы</h2>
-                    </div>
-                    <div class="col-sm-6 col-md-6">
-                        <div class="partner">
-                            <div class="logo-box">
-                                <a href="https://hse.ru/"><img src="images/hse.png" /></a>
-                            </div>
-                            <div class="caption">
-                                <p>Высшая Школа Экономики<!--, Факультет Компьютерных Наук--></p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-md-6">
-                        <div class="partner">
-                            <div class="logo-box">
-                                <a href="http://bayesgroup.ru/"><img src="images/bayesgroup.png" /></a>
-                            </div>
-                            <div class="caption">
-                                <p>Исследовательская группа байесовских методов</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div><!-- .container close -->
-        </section><!-- #organizers close -->
 
         <!-- 
         partners start
