Added registration info

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 	                    <li class="current"><a href="#hero-area">Начало</a></li>
 	                    <li><a href="#about">О школе</a></li>
 	                    <li><a href="#faq">FAQ</a></li>
-	                    <li><a href="#subscribe">Подписаться</a></li>
+	                    <li><a href="#subscribe">Регистрация</a></li>
 	                    <li><a href="#partners">Партнёры</a></li>
 	                    <li><a href="#contacts">Контакты</a></li>
 	                </ul>
@@ -78,7 +78,7 @@
                             <p class="wow fadeInDown" data-wow-delay="0.3s">Летняя школа по современным методам глубинного обучения и байесовскому подходу</p>
 	                        <p class="wow fadeInDown" data-wow-delay="0.3s">26-31 августа 2017, Москва</p>
 	                        <div class="wow fadeInDown" data-wow-delay="0.3s">
-	                        	<a class="btn btn-default btn-home" href="#about" role="button">Подробнее</a>
+	                        	<a class="btn btn-default btn-home" href="#subscribe" role="button">Подать заявку</a>
 	                        </div>
 	                    </div>
 	                </div>
@@ -356,7 +356,7 @@
                             </li>
                             <li>
                                 <strong>Как подать заявку на школу?</strong>
-                                <p>Пока что мы не принимаем заявки, но вы <a href="https://goo.gl/forms/q9yfd55yzdvj3pmB2">можете оставить свою контактную информацию</a>, чтобы быть в курсе событий.</p>
+                                <p>Заполните форму в в секции <a href="#subscribe">регистрация</a>.</p>
                             </li>
                         </ul>
                     </div>
@@ -404,7 +404,19 @@
                     <div class="col-md-12 text-center">
                         <div class="block">
                             <h2>Регистрация</h2>
-                            <p>Мы пока не принимаем заявок на школу, но Вы можете оставить свою <a href="https://goo.gl/forms/q9yfd55yzdvj3pmB2">контактную информацию</a> – это позволит нам оперативно уведомить всех заинтересованных о начале приёма заявок.</p>
+                            <p>
+                            
+                            Открыт <a href="https://goo.gl/forms/S59dHUYF4CvHka3y2" target="_blank">приём заявок</a>!
+                            Заявки принимаются до 31 марта 2017 года.
+                            </p>
+                            <p>
+                            Для оформления заявки необходимо
+                            
+                            заполнить анкету,
+                            выполнить небольшое практическое задание и
+                            дать развернутый комментарий к научной статье.
+
+                            </p>
                         </div>
                     </div>
                 </div>
