Added one big button for the registration

--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
                             <h2>Регистрация</h2>
                             <p>
                             
-                            Открыт <a href="https://goo.gl/forms/S59dHUYF4CvHka3y2" target="_blank">приём заявок</a>!
+                            Открыт приём заявок!
                             Заявки принимаются до 31 марта 2017 года.
                             </p>
                             <p>
@@ -417,6 +417,7 @@
                             дать развернутый комментарий к научной статье.
 
                             </p>
+	                        	<a class="btn btn-default btn-home" href="https://goo.gl/forms/S59dHUYF4CvHka3y2" role="button">Подать заявку</a>
                         </div>
                     </div>
                 </div>
