--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                         </div>
                         <div class="info">
                             Михаил Фигурнов<br/>
-                            Исследователь ФКН ВШЭ
+                            Научный сотрудник ФКН ВШЭ
                         </div>
                     </div>
 
