Closed the registration

--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
 	                        <h1 class="wow fadeInDown">Школа по Байесовским методам в глубинном обучении</h1>
                             <p class="wow fadeInDown" data-wow-delay="0.3s">Летняя школа по современным методам глубинного обучения и байесовскому подходу</p>
 	                        <p class="wow fadeInDown" data-wow-delay="0.3s">26-30 августа 2017, Москва</p>
-	                        <div class="wow fadeInDown" data-wow-delay="0.3s">
+	                        <!-- div class="wow fadeInDown" data-wow-delay="0.3s">
 	                        	<a class="btn btn-default btn-home" href="#subscribe" role="button">Подать заявку</a>
-	                        </div>
+	                        </div -->
 	                    </div>
 	                </div>
 	                <div class="col-md-4 zoomIn">
@@ -88,7 +88,7 @@
                                 <a href="https://hse.ru/"><img src="images/hse.png" /></a>
                             </div>
                             <!--div class="caption">
-                                <p>Высшая Школа Экономики<!--, Факультет Компьютерных Наук--></p>
+                                <p>Высшая Школа Экономики</p>
                                 </div-->
                             <hr/>
                             <div class="logo-box">
@@ -405,19 +405,8 @@
                         <div class="block">
                             <h2>Регистрация</h2>
                             <p>
-                            
-                            Открыт приём заявок!
-                            Заявки принимаются до 31 марта 2017 года.
+                            Приём заявок закрыт. Подтверждения участия в школе будут высланы в ближайшее время.
                             </p>
-                            <p>
-                            Для оформления заявки необходимо
-                            
-                            заполнить анкету,
-                            выполнить небольшое практическое задание и
-                            дать развернутый комментарий к научной статье.
-
-                            </p>
-	                        	<a class="btn btn-default btn-home" href="https://goo.gl/forms/S59dHUYF4CvHka3y2" role="button">Подать заявку</a>
                         </div>
                     </div>
                 </div>
