--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
                         <div class="block">
                             <h2>Регистрация</h2>
                             <p>
-                            Приём заявок закрыт. Подтверждения участия в школе будут высланы в ближайшее время.
+                            Приём заявок закрыт. Подтверждения участия в школе будут высланы до 31 мая.
                             </p>
                         </div>
                     </div>
