--- a/index.html
+++ b/index.html
@@ -433,16 +433,6 @@
                     <div class="col-sm-6 col-md-4">
                         <div class="partner">
                             <div class="logo-box">
-                                <a href="https://sberbank.ru/"><img src="images/sber-logo.png" title="Сбербанк" /></a>
-                            </div>
-                            <div class="caption">
-                                <p>Платиновый партнёр</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-md-4">
-                        <div class="partner">
-                            <div class="logo-box">
                                 <a href="https://yandex.ru/"><img src="images/yandex.png" title="Yandex" /></a>
                             </div>
                             <div class="caption">
@@ -464,6 +454,16 @@
                         <div class="partner">
                             <div class="logo-box">
                                 <a href="https://jetbrains.com/"><img src="images/jetbrains.png" title="JetBrains" /></a>
+                            </div>
+                            <div class="caption">
+                                <p>Золотой партнёр</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-4">
+                        <div class="partner">
+                            <div class="logo-box">
+                                <a href="https://sberbank.ru/"><img src="images/sber-logo.png" title="Сбербанк" /></a>
                             </div>
                             <div class="caption">
                                 <p>Золотой партнёр</p>
