--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
                         <div class="block">
                             <h2>Регистрация</h2>
                             <p>
-                            Приём заявок закрыт. Подтверждения участия в школе будут высланы до 31 мая.
+                            Прием заявок завершен. Участникам разослана информация об оплате участия в летней школе.
                             </p>
                         </div>
                     </div>
@@ -453,7 +453,7 @@
                     <div class="col-sm-6 col-md-4">
                         <div class="partner">
                             <div class="logo-box">
-                                <a href="https://jetbrains.com/"><img src="images/jetbrains.png" title="JetBrains" /></a>
+                                <a href="https://sberbank.ru/"><img src="images/sber-logo.png" title="Сбербанк" /></a>
                             </div>
                             <div class="caption">
                                 <p>Золотой партнёр</p>
@@ -463,7 +463,7 @@
                     <div class="col-sm-6 col-md-4">
                         <div class="partner">
                             <div class="logo-box">
-                                <a href="https://sberbank.ru/"><img src="images/sber-logo.png" title="Сбербанк" /></a>
+                                <a href="https://jetbrains.com/"><img src="images/jetbrains.png" title="JetBrains" /></a>
                             </div>
                             <div class="caption">
                                 <p>Золотой партнёр</p>
