--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
                                 <a href="https://sberbank.ru/"><img src="images/sber-logo.png" title="Сбербанк" /></a>
                             </div>
                             <div class="caption">
-                                <p>Золотой партнёр</p>
+                                <p>Платиновый партнёр</p>
                             </div>
                         </div>
                     </div>
