Added Temirchev to the lecturers list

--- a/index.html
+++ b/index.html
@@ -315,6 +315,15 @@
                             Магистрант МФТИ
                         </div>
                     </div>
+                    <div class="col-sm-6 col-md-3">
+                        <div class="photo">
+                            <img src="photos/temirchev.jpg" />
+                        </div>
+                        <div class="info">
+                            Павел Темирчев<br/>
+                            Магистрант МГУ им. Ломоносова
+                        </div>
+                    </div>
                 </div>
             </div>
             </div>
