--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 	                <ul class="nav navbar-nav navbar-right" id="top-nav">
 	                    <li class="current"><a href="#hero-area">Начало</a></li>
 	                    <li><a href="#about">О школе</a></li>
+	                    <li><a href="#schedule">Программа</a></li>
 	                    <li><a href="#faq">FAQ</a></li>
-	                    <li><a href="#subscribe">Регистрация</a></li>
 	                    <li><a href="#partners">Партнёры</a></li>
 	                    <li><a href="#contacts">Контакты</a></li>
 	                </ul>
@@ -201,6 +201,28 @@
                 </div>
             </div>
         </section><!-- #about close -->
+
+        <!-- 
+        Lecturers start
+        ==================== -->
+        <section id="schedule" class="section">
+            <div class="container">
+                <div class="row">
+                <div class="col-md-12">
+                    <div class="sub-heading">
+                        <h2>Программа школы</h2>
+                    </div>
+
+                    Ниже вы найдёте Google-календарь школы. Советуем добавить его в свой календарь. Так же вы можете скачать <a href="files/google-calendar-pdf.pdf">pdf версию расписания</a>.
+
+                    <br/>
+                    <br/>
+
+                    <iframe src="https://calendar.google.com/calendar/embed?title=Deep%7CBayes%20Summer%20School&amp;showTitle=0&amp;showCalendars=0&amp;mode=WEEK&amp;height=500&amp;wkst=7&amp;bgcolor=%23ffffff&amp;src=qs2hbhju023iprt08s9ov2ugbo%40group.calendar.google.com&amp;color=%232F6309&amp;ctz=Europe%2FMoscow" style="border-width:0" width="100%" height="500" frameborder="0" scrolling="no"></iframe> 
+                </div>
+            </div>
+            </div>
+        </section><!-- #speakers close -->
 
 
         <!-- 
