Changed default timeframe

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                     <br/>
                     <br/>
 
-                    <iframe src="https://calendar.google.com/calendar/embed?title=Deep%7CBayes%20Summer%20School&amp;showTitle=0&amp;showCalendars=0&amp;mode=WEEK&amp;height=500&amp;wkst=7&amp;bgcolor=%23ffffff&amp;src=qs2hbhju023iprt08s9ov2ugbo%40group.calendar.google.com&amp;color=%232F6309&amp;ctz=Europe%2FMoscow" style="border-width:0" width="100%" height="500" frameborder="0" scrolling="no"></iframe> 
+                    <iframe src="https://calendar.google.com/calendar/embed?title=Deep%7CBayes%20Summer%20School&amp;showTitle=0&amp;showCalendars=0&amp;mode=WEEK&amp;height=500&amp;wkst=7&amp;bgcolor=%23ffffff&amp;src=qs2hbhju023iprt08s9ov2ugbo%40group.calendar.google.com&amp;color=%232F6309&amp;ctz=Europe%2FMoscow&amp;dates=20170826%2F20170831" style="border-width:0" width="100%" height="500" frameborder="0" scrolling="no"></iframe> 
                 </div>
             </div>
             </div>
