Added link to twitter

--- a/index.html
+++ b/index.html
@@ -527,6 +527,7 @@
                     <div class="heading">
                         <h2>Контакты</h2>
                         <p>Если у Вас есть какие-либо вопросы по школе, или Вы хотите выступить партнёром школы, пишите на <a href="mailto:info@deepbayes.ru">info@deepbayes.ru</a>.</p>
+                        <p>А если вопросов нет, можете подписаться на нас в <a href="https://twitter.com/deepbayes_ru">Twitter</a>.</p>
                     </div>
                 </div>
             </div><!-- .container close -->
