Updated link to the schedule

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                         <h2>Программа школы</h2>
                     </div>
 
-                    Ниже вы найдёте Google-календарь школы. Советуем добавить его в свой календарь. Так же вы можете скачать <a href="files/google-calendar-pdf.pdf">pdf версию расписания</a>.
+                    Ниже вы найдёте Google-календарь школы. Советуем добавить его в свой календарь. Так же вы можете скачать <a href="files/schedule.pdf">pdf версию расписания</a>.
 
                     <br/>
                     <br/>
