--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 	                    <li><a href="#about">О школе</a></li>
 	                    <li><a href="#schedule">Программа</a></li>
 	                    <li><a href="#faq">FAQ</a></li>
+	                    <li><a href="#video">Материалы</a></li>
 	                    <li><a href="#partners">Партнёры</a></li>
 	                    <li><a href="#contacts">Контакты</a></li>
 	                </ul>
@@ -356,10 +357,10 @@
         ==================== -->
         <section id="faq" class="section">
             <div class="container">
+                <div class="row">
                 <div class="sub-heading">
                     <h2>FAQ</h2>
                 </div>
-                <div class="row">
                     <div class="col-md-6 col-sm-12">
                         <ul>
                             <li>
@@ -429,16 +430,21 @@
             </div>
         </section><!-- #faq close -->
 
-        <section id="subscribe" class="section">
+        <section id="video" class="section">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-12 text-center">
-                        <div class="block">
-                            <h2>Регистрация</h2>
-                            <p>
-                            Прием заявок завершен. Участникам разослана информация об оплате участия в летней школе.
-                            </p>
-                        </div>
+                    <div class="sub-heading">
+                        <h2>Материалы</h2>
+                    </div>
+                    <div class="block">
+                        <p>Все материалы школы доступны онлайн:</p>
+                        <ul>
+                            <li><a href="https://www.youtube.com/playlist?list=PLEqoHzpnmTfBSyGmE4nBlhxxi28dCZwWN">Видеозаписи лекций</a></li>
+                            <li><a href="https://drive.google.com/drive/folders/0B2zoFVYw1rN3WUZUS2ZGWmhobkU">Слайды</a></li>
+                            <li><a href="https://github.com/bayesgroup/deepbayes2017">Задания с семинаров</a></li>
+                        </ul>
+                        <br/>
+                        <div style="position:relative;height:0;width:90%;margin:0 auto;padding-bottom:56.25%"><iframe src="https://www.youtube.com/embed/videoseries?list=PLEqoHzpnmTfBSyGmE4nBlhxxi28dCZwWN&amp;showinfo=0?ecver=2" width="640" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe></div> 
                     </div>
                 </div>
             </div>
@@ -452,6 +458,7 @@
                 <div class="row">
                     <div class="heading">
                         <h2>Партнёры</h2>
+                    </div>
                         <p>Мы всячески приветствуем помощь от любых организаций. Средства пойдут на (1)
                         нормальное питание на кофе-брейках для участников взамен ссохшихся бутербродов; (2)
                         некоторое количество тревел-грантов для иногородних ребят; (3) памятные сувениры для
@@ -460,7 +467,6 @@
                         то еще и (4) устроим веселый банкет для всех, на котором участники смогут пообщаться с
                         лекторами и тьюторами :-)</p>
                         <p>По вопросам поддержки школы пишите на <a href="mailto:info@deepbayes.ru">info@deepbayes.ru</a>.</p>
-                    </div>
                     <div class="col-sm-6 col-md-4">
                         <div class="partner">
                             <div class="logo-box">
