--- a/index.html
+++ b/index.html
@@ -60,9 +60,8 @@
 	                <ul class="nav navbar-nav navbar-right" id="top-nav">
 	                    <li class="current"><a href="#hero-area">Начало</a></li>
 	                    <li><a href="#about">О школе</a></li>
-	                    <li><a href="#schedule">Программа</a></li>
-	                    <li><a href="#faq">FAQ</a></li>
 	                    <li><a href="#video">Материалы</a></li>
+	                    <li><a href="#faq">FAQ</a></li>
 	                    <li><a href="#partners">Партнёры</a></li>
 	                    <li><a href="#contacts">Контакты</a></li>
 	                </ul>
@@ -202,10 +201,32 @@
                 </div>
             </div>
         </section><!-- #about close -->
+	
+	
+        <section id="video" class="section">
+            <div class="container">
+                <div class="row">
+                    <div class="sub-heading">
+                        <h2>Материалы</h2>
+                    </div>
+                    <div class="block">
+                        <p>Все материалы школы доступны онлайн:</p>
+                        <ul>
+                            <li><a href="https://www.youtube.com/playlist?list=PLEqoHzpnmTfBSyGmE4nBlhxxi28dCZwWN">Видеозаписи лекций</a></li>
+                            <li><a href="https://drive.google.com/drive/folders/0B2zoFVYw1rN3WUZUS2ZGWmhobkU">Слайды</a></li>
+                            <li><a href="https://github.com/bayesgroup/deepbayes2017">Задания с семинаров</a></li>
+                        </ul>
+                        <br/>
+                        <div style="position:relative;height:0;width:90%;margin:0 auto;padding-bottom:56.25%"><iframe src="https://www.youtube.com/embed/videoseries?list=PLEqoHzpnmTfBSyGmE4nBlhxxi28dCZwWN&amp;showinfo=0?ecver=2" width="640" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe></div> 
+                    </div>
+                </div>
+            </div>
+        </section><!-- #video close -->
+	
 
         <!-- 
-        Lecturers start
-        ==================== -->
+        Schedule start
+        ====================
         <section id="schedule" class="section">
             <div class="container">
                 <div class="row">
@@ -223,7 +244,7 @@
                 </div>
             </div>
             </div>
-        </section><!-- #speakers close -->
+        </section> #schedule close -->
 
 
         <!-- 
@@ -429,26 +450,6 @@
                 </div>
             </div>
         </section><!-- #faq close -->
-
-        <section id="video" class="section">
-            <div class="container">
-                <div class="row">
-                    <div class="sub-heading">
-                        <h2>Материалы</h2>
-                    </div>
-                    <div class="block">
-                        <p>Все материалы школы доступны онлайн:</p>
-                        <ul>
-                            <li><a href="https://www.youtube.com/playlist?list=PLEqoHzpnmTfBSyGmE4nBlhxxi28dCZwWN">Видеозаписи лекций</a></li>
-                            <li><a href="https://drive.google.com/drive/folders/0B2zoFVYw1rN3WUZUS2ZGWmhobkU">Слайды</a></li>
-                            <li><a href="https://github.com/bayesgroup/deepbayes2017">Задания с семинаров</a></li>
-                        </ul>
-                        <br/>
-                        <div style="position:relative;height:0;width:90%;margin:0 auto;padding-bottom:56.25%"><iframe src="https://www.youtube.com/embed/videoseries?list=PLEqoHzpnmTfBSyGmE4nBlhxxi28dCZwWN&amp;showinfo=0?ecver=2" width="640" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe></div> 
-                    </div>
-                </div>
-            </div>
-        </section><!-- #call-to-action close -->
 
         <!-- 
         partners start
