--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 	            <div class="row">
 	                <div class="col-md-8">
 	                    <div class="block">
-	                        <h1 class="wow fadeInDown">Summer school on Deep Learning and Bayesian Methods</h1>
+	                        <h1 class="wow fadeInDown">Summer school on <br/><span>Deep Learning</span> and <br/><span>Bayesian Methods</span></h1>
 	                        <p class="wow fadeInDown" data-wow-delay="0.3s">August 2018, Moscow, Russia</p>
 	                        <!-- div class="wow fadeInDown" data-wow-delay="0.3s">
 	                        	<a class="btn btn-default btn-home" href="#subscribe" role="button">Apply</a>
@@ -180,7 +180,7 @@
                         <ul>
                             <li>
                                 <strong>How do I apply?</strong>
-                                <p>The most up-to-date information about applying and registration is available here: TODO:form . If you have any additional questions, please, email us at <a href="mailto:info@deepbayes.ru">info@deepbayes.ru</a></p>
+                                <p>The most up-to-date information about applying and registration is available <a href="#apply">here</a>. If you have any additional questions, please, email us at <a href="mailto:info@deepbayes.ru">info@deepbayes.ru</a></p>
                             </li>
                             <li>
                                 <strong>What is the language of the school?</strong>
@@ -192,7 +192,7 @@
                             </li>
                             <li>
                                 <strong>If I pay the fee, does it automatically mean I can participate?</strong>
-                                <p>No, candidates should first apply here: TODO:form. The participants will be selected on a competitive basis. Only approved candidates will be asked to proceed with paying the fee. The selection process is necessary because we have a limited number of spots available, and we also want to make sure that our participants have a suitable background to understand the material and have a useful experience at Deep|Bayes School.</p>
+                                <p>No, candidates will have to complete the application form. The participants will be selected on a competitive basis. Only approved candidates will be asked to proceed with paying the fee. The selection process is necessary because we have a limited number of spots available, and we also want to make sure that our participants have a suitable background to understand the material and have a useful experience at Deep|Bayes School.</p>
                             </li>
                             <li>
                                 <strong>What is the selection process like?</strong>
@@ -256,18 +256,18 @@
 
         <section id="apply" class="section">
             <div class="container">
-                <div class="row">
-                    <div class="col-md-12 text-center">
-                        <div class="block">
+                <div class="row text-center">
+                        <div class="heading">
                             <h2>How to Apply</h2>
+                        </div>
+                        <div class="block">
                             <p>
-                                Application will open soon. Please, stay tuned! If you wish to receive a notification about application start and other important announcements, please leave your contact information in the form.                                
+                                Application will open soon. Please, stay tuned! If you wish to receive a notification about application start and other important announcements, please leave your contact information in the <a href="https://docs.google.com/forms/d/e/1FAIpQLSfEnyY7l7ZfyGFDJbHnoOVfW_XqFaJ7TMBXlNfTMXOtcJl3JA/viewform">form</a>.
                             </p>                                
                             <p>
                                 Selection of participants is highly competitive. Last year applicants had to complete a small programming assignment and write a detailed review on a machine learning research paper of their choice                                
                             </p>
                         </div>
-                    </div>
                 </div>
             </div>
         </section><!-- #call-to-action close -->
@@ -303,6 +303,8 @@
                 <div class="row">
                     <div class="heading">
                         <h2>Contact</h2>
+                    </div>
+                    <div class="block">
                         <p>If you have any further questions about our summer school, or you wish to become our partner, please send an email to <a href="mailto:info@deepbayes.ru">info@deepbayes.ru</a>.</p>
                         <p>You can also follow us on <a href="https://twitter.com/deepbayes_ru">Twitter</a>.</p>
                     </div>
